--- a/src/css/controller.css
+++ b/src/css/controller.css
@@ -12,3 +12,15 @@ html {
         font-size: 0.6rem;
     }
 }
+
+.select-user {
+    max-width: 400px;
+}
+
+.select-position button{
+    background-color: red;
+    width: 50px;
+    height: 50px;
+    margin-left: 4px;
+    margin-right: 4px;
+}
