--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 3000px){
+@media screen and (min-height: 1081px){
     html {
         font-size: 16px;
     }
@@ -8,7 +8,7 @@
     }
 }
 
-@media screen and (max-width: 3000px) {
+@media screen and (max-height: 1080px) {
     html {
         font-size: 4px;
     }
@@ -308,9 +308,9 @@ span{
 
 .ScreenshotsContainer {
     margin-left: 0vw;
-    margin-top: 25vh;
+    margin-top: 0vh;
     max-width: 66.67vw;
-    max-height: 75vh;
+    max-height: 100vh;
 }
 
 .Screenshot {
